@@ -181,7 +181,7 @@ public:
 	}
 	static string& escape(string& aString, bool aAttrib, bool aLoading = false, bool utf8 = true);
 	/** 
-	 * This is a heurestic for whether escape needs to be called or not. The results are
+	 * This is a heuristic for whether escape needs to be called or not. The results are
  	 * only guaranteed for false, i e sometimes true might be returned even though escape
 	 * was not needed...
 	 */
@@ -284,5 +284,5 @@ private:
 
 /**
  * @file
- * $Id: SimpleXML.h,v 1.44 2005/04/24 08:13:11 arnetheduck Exp $
+ * $Id: SimpleXML.h,v 1.45 2005/05/07 22:43:23 arnetheduck Exp $
  */
